Updated pom java 1.8 version